# zynq-parrot

./: .clang-format  .gitignore  .gitlab-ci.common.yml  .gitlab-ci.local.yml  .gitlab-ci.yml  .gitmodules  Makefile  Makefile.common  Makefile.config  Makefile.env  README.md
cosim/black-parrot-example/: .gitignore  CMakeLists.txt  Makefile  Makefile.collateral  Makefile.cov  Makefile.design  Makefile.hardware  README.md  bp_to_axi_decoder.sv  bp_unicore_axi_sim.sv  bsg_coverage.hpp  cascade-cfg.json  coemulation.hpp  cp.csv  cp.csv_bp_be_scheduler  cp.csv_calculator_top  cp.csv_dcache  cp.csv_detector  cp.csv_director  cp.csv_pipe_aux  cp.csv_pipe_fma  cp.csv_pipe_int  cp.csv_pipe_long  cp.csv_pipe_mem  cp.csv_pipe_sys  cp_fpga.csv  dromajo_coemulation.hpp  eth_test.nbf  flist.vcs  hello.nbf  instrument.sh  prog.nbf  ps.cpp  ps.hpp  pso_fuzz.py  spike_coemulation.hpp  top_zynq.sv
cosim/black-parrot-example/csv/: be  be.calculator  be.calculator.fpga  be.calculator.pipe_aux  be.calculator.pipe_fma  be.calculator.pipe_int  be.calculator.pipe_long  be.calculator.pipe_mem  be.calculator.pipe_mem.fpga  be.calculator.pipe_sys  be.detector  be.director  be.scheduler  fe.controller  fe.icache  fe.icache.fpga  fe.immu  fe.instr_scan  fe.pc_gen  fe.pc_gen.fpga
cosim/black-parrot-example/flists/: base_flist.vcs
cosim/black-parrot-example/fpga/: Makefile  README.md  run_all.tcl  top.v  vivado-build-ip.tcl  vivado-create-block.tcl  vivado_parse_bp_vcs_flist.tcl  vivado_parse_vcs_flist.tcl
cosim/black-parrot-example/htif/: config.h  device.cc  htif.cc  htif.h  memif.h  syscall.cc
cosim/black-parrot-example/instrumentation/: .gitignore  instrument.py  (+3 more)
(+568 files in other folders)
